--- a/index.html
+++ b/index.html
@@ -157,9 +157,10 @@
                     <div class="grid md:grid-cols-2 gap-8 mb-8">
                         <div class="bg-white/10 backdrop-blur-sm rounded-xl p-6 border border-white/20">
                             <div class="w-16 h-16 mx-auto mb-3">
-                                <svg viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg" class="w-full h-full text-yellow-300">
-                                    <path d="M12 2L15.09 8.26L22 9.27L17 14.14L18.18 21.02L12 17.77L5.82 21.02L7 14.14L2 9.27L8.91 8.26L12 2Z" fill="currentColor" stroke="currentColor" stroke-width="1"/>
-                                </svg>
+                                <div class="w-16 h-16 mx-auto mb-3">
+                                    <img src="https://i.postimg.cc/WzWTyW3j/a16d5be7-20ef-4e8d-b4be-bd60ff2db0eb.jpg"/>
+                                </div>
+
                             </div>
                             <h3 class="text-2xl font-bold mb-2">Temperos Dona Nina</h3>
                             <p class="text-lg opacity-90">Linha gourmet para momentos especiais</p>
