--- a/index.html
+++ b/index.html
@@ -168,9 +168,7 @@
                         
                         <div class="bg-white/10 backdrop-blur-sm rounded-xl p-6 border border-white/20">
                             <div class="w-16 h-16 mx-auto mb-3">
-                                <svg viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg" class="w-full h-full text-green-300">
-                                    <path d="M12 2C13.1 2 14 2.9 14 4C14 5.1 13.1 6 12 6C10.9 6 10 5.1 10 4C10 2.9 10.9 2 12 2ZM21 9V7L15 6.5V9C15 10.66 13.66 12 12 12S9 10.66 9 12V6.5L3 7V9H5V19C5 20.1 5.9 21 7 21H17C18.1 21 19 20.1 19 19V9H21ZM11 14H13V17H11V14Z" fill="currentColor"/>
-                                </svg>
+                                <img src="https://i.postimg.cc/1tSWxynt/Elegant-Serif-Logo-with-Bold-Leaf-Accents.png"/>
                             </div>
                             <h3 class="text-2xl font-bold mb-2">Cheiro da Terra</h3>
                             <p class="text-lg opacity-90">Temperos tradicionais para o dia a dia</p>
@@ -203,9 +201,7 @@
                 <div class="text-center mb-8">
                     <div class="flex items-center justify-center mb-3">
                         <div class="w-8 h-8 mr-3">
-                            <svg viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg" class="w-full h-full text-yellow-500">
-                                <path d="M12 2L15.09 8.26L22 9.27L17 14.14L18.18 21.02L12 17.77L5.82 21.02L7 14.14L2 9.27L8.91 8.26L12 2Z" fill="currentColor" stroke="currentColor" stroke-width="1"/>
-                            </svg>
+                            <img src="https://i.postimg.cc/WzWTyW3j/a16d5be7-20ef-4e8d-b4be-bd60ff2db0eb.jpg"/>
                         </div>
                         <h3 class="text-3xl font-bold text-green-700">Temperos Dona Nina</h3>
                     </div>
