--- a/index.html
+++ b/index.html
@@ -475,30 +475,34 @@
                 </div>
 
                 <div class="grid md:grid-cols-3 gap-8">
+                    <!-- Primeiro item -->
                     <div class="text-center">
                         <div class="w-56 h-56 mx-auto mb-0">
-                            <img src="https://i.postimg.cc/VNBbZCxV/uma-imagem-relacionada-com-Produtos-premium-com-sabor-incompar-vel.jpg"/>
+                            <img src="https://i.postimg.cc/VNBbZCxV/uma-imagem-relacionada-com-Produtos-premium-com-sabor-incompar-vel.jpg" alt="Excelência" class="w-full h-full object-cover"/>
                         </div>
-                        <h4 class="text-xl font-bold text-gray-800 mb-0">Excelência</h4>
-                        <p class="text-gray-600">Produtos premium com sabor incomparável</p>
+                        <h4 class="text-xl font-bold text-gray-800 mb-0 mt-2">Excelência</h4>
+                        <p class="text-gray-600 mt-1">Produtos premium com sabor incomparável</p>
+                   </div>
+
+                    <!-- Segundo item -->
+                    <div class="text-center">
+                        <div class="w-56 h-56 mx-auto mb-0">
+                            <img src="https://i.postimg.cc/TwBLpJgL/uma-imagem-relacionada-com-alimento-alto-padr-o-e-Tradi-o-Receitas-desenvolvidas-ao-longo-de-an.jpg" alt="Tradição" class="w-full h-full object-cover"/>
+                        </div>
+                        <h4 class="text-xl font-bold text-gray-800 mb-0 mt-2">Tradição</h4>
+                        <p class="text-gray-600 mt-1">Receitas desenvolvidas ao longo de anos</p>
                     </div>
-                    
+
+                    <!-- Terceiro item -->
                     <div class="text-center">
                         <div class="w-56 h-56 mx-auto mb-0">
-                            <img src="https://i.postimg.cc/TwBLpJgL/uma-imagem-relacionada-com-alimento-alto-padr-o-e-Tradi-o-Receitas-desenvolvidas-ao-longo-de-an.jpg"/>
+                            <img src="https://i.postimg.cc/SQzYHHbJ/uma-imagem-para-colocar-no-meu-site-terranina-alimentos-relacionada-a-Paix-o-Amor-pela-culin-ria.jpg" alt="Paixão" class="w-full h-full object-cover"/>
                         </div>
-                        <h4 class="text-xl font-bold text-gray-800 mb-0">Tradição</h4>
-                        <p class="text-gray-600">Receitas desenvolvidas ao longo de anos</p>
-                    </div>
-                    
-                    <div class="text-center">
-                        <div class="w-56 h-56 mx-auto mb-0">
-                            <img src="https://i.postimg.cc/SQzYHHbJ/uma-imagem-para-colocar-no-meu-site-terranina-alimentos-relacionada-a-Paix-o-Amor-pela-culin-ria.jpg"/>
-                        </div>
-                        <h4 class="text-xl font-bold text-gray-800 mb-0">Paixão</h4>
-                        <p class="text-gray-600">Amor pela culinária em cada produto</p>
+                        <h4 class="text-xl font-bold text-gray-800 mb-0 mt-2">Paixão</h4>
+                        <p class="text-gray-600 mt-1">Amor pela culinária em cada produto</p>
                     </div>
                 </div>
+
             </div>
         </div>
     </section>
