--- a/index.html
+++ b/index.html
@@ -465,13 +465,14 @@
                     </div>
                     <div class="bg-white rounded-lg p-6 shadow-md">
                         <div class="text-center">
-                            <div class="w-20 h-20 mx-auto mb-4">
-                                <img src="https://i.postimg.cc/XYqHbVjc/uma-imagem-relacionado-com-qualidade-garantida-para-colocar-no-meu-site-de-temperos.jpg"/>
+                            <div class="w-20 h-20 mx-auto mb-0">
+                                <img src="https://i.postimg.cc/XYqHbVjc/uma-imagem-relacionado-com-qualidade-garantida-para-colocar-no-meu-site-de-temperos.jpg" alt="Qualidade Garantida" class="w-full h-full object-cover"/>
                             </div>
-                            <h4 class="text-xl font-bold text-gray-800 mb-2">Qualidade Garantida</h4>
-                            <p class="text-gray-600">Ingredientes selecionados e processos rigorosos de qualidade</p>
+                            <h4 class="text-xl font-bold text-gray-800 mb-0 mt-2">Qualidade Garantida</h4>
+                            <p class="text-gray-600 mt-1">Ingredientes selecionados e processos rigorosos de qualidade</p>
                         </div>
                     </div>
+
                 </div>
 
                 <div class="grid md:grid-cols-3 gap-8">
