--- a/index.html
+++ b/index.html
@@ -93,9 +93,10 @@
         <nav class="container mx-auto px-6 py-4">
             <div class="flex items-center justify-between">
                 <div class="flex items-center space-x-3">
-                    <div class="w-12 h-12 bg-white rounded-full flex items-center justify-center">
-                        <span class="text-2xl font-bold text-green-700">T</span>
+                    <div class="w-12 h-12 mx-auto">
+                        <img src="https://i.postimg.cc/RhFWsbmq/Simple-and-inviting-logo-including-garlic-and-onion-2.png" alt="Logo" class="w-full h-full object-cover rounded-full"/>
                     </div>
+
                     <div>
                         <h1 class="text-xl font-bold">Terranina Alimentos Ltda</h1>
                         <p class="text-sm opacity-90">Temperos que fazem a diferença</p>
@@ -769,8 +770,8 @@
             <div class="grid md:grid-cols-4 gap-8 mb-8">
                 <div>
                     <div class="flex items-center space-x-3 mb-4">
-                        <div class="w-10 h-10 bg-white rounded-full flex items-center justify-center">
-                            <span class="text-lg font-bold text-green-700">T</span>
+                        <div class="w-12 h-12 mx-auto">
+                            <img src="https://i.postimg.cc/RhFWsbmq/Simple-and-inviting-logo-including-garlic-and-onion-2.png" alt="Logo" class="w-full h-full object-cover rounded-full"/>
                         </div>
                         <div>
                             <h3 class="text-lg font-bold">Terranina Alimentos</h3>
@@ -813,7 +814,7 @@
             
             <div class="border-t border-white/20 pt-8 text-center">
                 <p class="text-sm opacity-90">
-                    © 2024 Terranina Alimentos Ltda. Todos os direitos reservados.
+                    © 2025 Terranina Alimentos Ltda. Todos os direitos reservados.
                 </p>
             </div>
         </div>
