--- a/index.html
+++ b/index.html
@@ -807,7 +807,7 @@
                     <div class="space-y-2 text-sm opacity-90">
                         <p>📞 (35) 3641-1643</p>
                         <p>📧 terraninaalimentosltda@gmail.com</p>
-                        <p>📍 Centro - Cidade/Estado</p>
+                        <p>📍 Jarbas Guimarães Neto, 2735. Vargem Grande - Brazópolis/MG</p>
                     </div>
                 </div>
             </div>
