--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@
                 <div class="text-center max-w-4xl mx-auto">
                     <h2 class="text-5xl font-bold mb-6 drop-shadow-lg">Sabor Autêntico em Cada Tempero</h2>
                     <p class="text-xl mb-8 drop-shadow-md">
-                        Há anos trazendo o melhor da culinária brasileira para sua mesa com nossas linhas 
+                        Há anos trazendo o melhor da culinária mineira para sua mesa com nossas linhas 
                         Temperos Dona Nina e Cheiro da Terra
                     </p>
                     
@@ -275,7 +275,7 @@
                 <div class="grid md:grid-cols-2 lg:grid-cols-3 gap-6">
                     <div class="product-card bg-white rounded-lg p-6 shadow-md">
                         <div class="w-16 h-16 mx-auto mb-4">
-                            <img src="https://i.postimg.cc/zGg3LgpM/Massa-de-Alho-Dona-Nina-550g.png"/>
+                            <img src="https://i.postimg.cc/DZRRQf2t/Tempero-Completo-Cheiro-da-Terra-1kg-2.png"/>
                         </div>
                         <h4 class="font-bold text-lg mb-2">Tempero Completo Cheiro da Terra</h4>
                         <p class="text-gray-600 mb-2">1kg</p>
@@ -455,7 +455,7 @@
                     <div>
                         <h3 class="text-2xl font-bold text-green-700 mb-4">Nossa História</h3>
                         <p class="text-gray-600 mb-4">
-                            A Terranina Alimentos nasceu da paixão pela culinária brasileira e do desejo de levar 
+                            A Terranina Alimentos nasceu da paixão pela culinária mineira e do desejo de levar 
                             temperos de qualidade superior para todas as mesas do país. Com anos de experiência 
                             no mercado, desenvolvemos duas linhas especiais que atendem diferentes necessidades.
                         </p>
