--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@
                     <h2 class="text-5xl font-bold mb-6 drop-shadow-lg">Sabor Autêntico em Cada Tempero</h2>
                     <p class="text-xl mb-8 drop-shadow-md">
                         Há anos trazendo o melhor da culinária mineira para sua mesa com nossas linhas 
-                        Temperos Dona Nina e Cheiro da Terra
+                        Temperos Dona Nina e Cheiro Original da Terra
                     </p>
                     
                     <!-- Destaques das Linhas -->
@@ -171,7 +171,7 @@
                             <div class="w-14 h-14 mx-auto mb-3">
                                 <img src="https://i.postimg.cc/1tSWxynt/Elegant-Serif-Logo-with-Bold-Leaf-Accents.png"/>
                             </div>
-                            <h3 class="text-2xl font-bold mb-2">Cheiro da Terra</h3>
+                            <h3 class="text-2xl font-bold mb-2">Cheiro Original da Terra</h3>
                             <p class="text-lg opacity-90">Temperos tradicionais para o dia a dia</p>
                         </div>
                     </div>
@@ -260,14 +260,14 @@
                 </div>
             </div>
 
-            <!-- Linha Cheiro da Terra -->
+            <!-- Linha Cheiro Original da Terra -->
             <div class="mb-16">
                 <div class="text-center mb-8">
                     <div class="flex items-center justify-center mb-3">
                         <div class="w-12 h-12 mr-3">
                             <img src="https://i.postimg.cc/1tSWxynt/Elegant-Serif-Logo-with-Bold-Leaf-Accents.png"/>
                         </div>
-                        <h3 class="text-3xl font-bold text-green-700">Cheiro da Terra</h3>
+                        <h3 class="text-3xl font-bold text-green-700">Cheiro Original da Terra</h3>
                     </div>
                     <p class="text-lg text-gray-600">Temperos tradicionais para o dia a dia da família brasileira</p>
                 </div>
@@ -277,10 +277,10 @@
                         <div class="w-16 h-16 mx-auto mb-4">
                             <img src="https://i.postimg.cc/DZRRQf2t/Tempero-Completo-Cheiro-da-Terra-1kg-2.png"/>
                         </div>
-                        <h4 class="font-bold text-lg mb-2">Tempero Completo Cheiro da Terra</h4>
+                        <h4 class="font-bold text-lg mb-2">Tempero Completo Cheiro Original da Terra</h4>
                         <p class="text-gray-600 mb-2">1kg</p>
                         <p class="text-sm text-gray-500">Tempero tradicional para uso diário</p>
-                        <button class="btn-primary text-white px-4 py-2 rounded mt-4 w-full" onclick="requestQuote('Tempero Completo Cheiro da Terra 1kg')">
+                        <button class="btn-primary text-white px-4 py-2 rounded mt-4 w-full" onclick="requestQuote('Tempero Completo Cheiro Original da Terra 1kg')">
                             Solicitar Orçamento
                         </button>
                     </div>
@@ -289,10 +289,10 @@
                         <div class="w-16 h-16 mx-auto mb-4">
                             <img src="https://i.postimg.cc/jjJ7H1XB/Tempero-Completo-Cheiro-da-Terra-300g.png"/>
                         </div>
-                        <h4 class="font-bold text-lg mb-2">Tempero Completo Cheiro da Terra</h4>
+                        <h4 class="font-bold text-lg mb-2">Tempero Completo Cheiro Original da Terra</h4>
                         <p class="text-gray-600 mb-2">300g</p>
                         <p class="text-sm text-gray-500">Embalagem prática para o dia a dia</p>
-                        <button class="btn-primary text-white px-4 py-2 rounded mt-4 w-full" onclick="requestQuote('Tempero Completo Cheiro da Terra 300g')">
+                        <button class="btn-primary text-white px-4 py-2 rounded mt-4 w-full" onclick="requestQuote('Tempero Completo Cheiro Original da Terra 300g')">
                             Solicitar Orçamento
                         </button>
                     </div>
@@ -301,10 +301,10 @@
                         <div class="w-16 h-16 mx-auto mb-4">
                             <img src="https://i.postimg.cc/Kc5gDBPS/Tempero-Completo-Cheiro-da-Terra-500g-Sach.png"/>
                         </div>
-                        <h4 class="font-bold text-lg mb-2">Tempero Completo Cheiro da Terra</h4>
+                        <h4 class="font-bold text-lg mb-2">Tempero Completo Cheiro Original da Terra</h4>
                         <p class="text-gray-600 mb-2">Sachê 500g</p>
                         <p class="text-sm text-gray-500">Porção individual para experimentar</p>
-                        <button class="btn-primary text-white px-4 py-2 rounded mt-4 w-full" onclick="requestQuote('Tempero Completo Cheiro da Terra Sachê 500g')">
+                        <button class="btn-primary text-white px-4 py-2 rounded mt-4 w-full" onclick="requestQuote('Tempero Completo Cheiro Original da Terra Sachê 500g')">
                             Solicitar Orçamento
                         </button>
                     </div>
@@ -313,7 +313,7 @@
                         <div class="w-16 h-16 mx-auto mb-4">
                             <img src="https://i.postimg.cc/85Nz7XnJ/Massa-de-Alho-Cheiro-da-Terra-1kg.png"/>
                         </div>
-                        <h4 class="font-bold text-lg mb-2">Massa de Alho Cheiro da Terra</h4>
+                        <h4 class="font-bold text-lg mb-2">Massa de Alho Cheiro Original da Terra</h4>
                         <p class="text-gray-600 mb-2">1kg</p>
                         <p class="text-sm text-gray-500">Porção individual para experimentar</p>
                         <button class="btn-primary text-white px-4 py-2 rounded mt-4 w-full" onclick="requestQuote('Massa de Alho pronto para uso 1kg')">
@@ -325,7 +325,7 @@
                         <div class="w-16 h-16 mx-auto mb-4">
                             <img src="https://i.postimg.cc/QMrXznDw/Alho-Frito-Cheiro-da-Terra-100g.png"/>
                         </div>
-                        <h4 class="font-bold text-lg mb-2">Alho Frito Cheiro da Terra</h4>
+                        <h4 class="font-bold text-lg mb-2">Alho Frito Cheiro Original da Terra</h4>
                         <p class="text-gray-600 mb-2">100g</p>
                         <p class="text-sm text-gray-500">Porção individual para experimentar</p>
                         <button class="btn-primary text-white px-4 py-2 rounded mt-4 w-full" onclick="requestQuote('Alho Frito que não pode faltar em seus pratos 100g')">
@@ -337,7 +337,7 @@
                         <div class="w-16 h-16 mx-auto mb-4">
                             <img src="https://i.postimg.cc/25TPxHS3/Alho-Triturado-Cheiro-da-Terra-200g.png"/>
                         </div>
-                        <h4 class="font-bold text-lg mb-2">Alho Triturado Cheiro da Terra</h4>
+                        <h4 class="font-bold text-lg mb-2">Alho Triturado Cheiro Original da Terra</h4>
                         <p class="text-gray-600 mb-2">200g</p>
                         <p class="text-sm text-gray-500">Porção individual para experimentar</p>
                         <button class="btn-primary text-white px-4 py-2 rounded mt-4 w-full" onclick="requestQuote('Alho Triturado pratico que vai dar aquele sabor da comida mineira 200g')">
@@ -405,12 +405,28 @@
                                 <span class="text-sm">Massa de Alho Dona Nina 550g</span>
                             </label>
                             <label class="flex items-center">
-                                <input type="checkbox" name="produtos" value="Tempero Completo Cheiro da Terra 1kg" class="mr-2">
-                                <span class="text-sm">Tempero Completo Cheiro da Terra 1kg</span>
+                                <input type="checkbox" name="produtos" value="Tempero Completo Cheiro Original da Terra 1kg" class="mr-2">
+                                <span class="text-sm">Tempero Completo Cheiro Original da Terra 1kg</span>
                             </label>
                             <label class="flex items-center">
-                                <input type="checkbox" name="produtos" value="Tempero Completo Cheiro da Terra 300g" class="mr-2">
-                                <span class="text-sm">Tempero Completo Cheiro da Terra 300g</span>
+                                <input type="checkbox" name="produtos" value="Tempero Completo Cheiro Original da Terra 300g" class="mr-2">
+                                <span class="text-sm">Tempero Completo Cheiro Original da Terra 300g</span>
+                            </label>
+                            <label class="flex items-center">
+                                <input type="checkbox" name="produtos" value="Tempero Completo Cheiro Original da Terra 300g" class="mr-2">
+                                <span class="text-sm">Tempero Completo Cheiro Original da Terra 500g (sachê)</span>
+                            </label>
+                            <label class="flex items-center">
+                                <input type="checkbox" name="produtos" value="Tempero Completo Cheiro Original da Terra 300g" class="mr-2">
+                                <span class="text-sm">Massa de Alho Cheiro Original da Terra 1kg</span>
+                            </label>
+                            <label class="flex items-center">
+                                <input type="checkbox" name="produtos" value="Tempero Completo Cheiro Original da Terra 300g" class="mr-2">
+                                <span class="text-sm">Alho Frito Cheiro Original da Terra 100g</span>
+                            </label>
+                            <label class="flex items-center">
+                                <input type="checkbox" name="produtos" value="Tempero Completo Cheiro Original da Terra 300g" class="mr-2">
+                                <span class="text-sm">Alho Triturado Cheiro Original da Terra 200g</span>
                             </label>
                         </div>
                     </div>
@@ -456,7 +472,7 @@
                         <h3 class="text-2xl font-bold text-green-700 mb-4">Nossa História</h3>
                         <p class="text-gray-600 mb-4">
                             A Terranina Alimentos nasceu da paixão pela culinária mineira e do desejo de levar 
-                            temperos de qualidade superior para todas as mesas do país. Com anos de experiência 
+                            temperos de qualidade superior para todas as mesas do país. Com mais de 25 anos de experiência 
                             no mercado, desenvolvemos duas linhas especiais que atendem diferentes necessidades.
                         </p>
                         <p class="text-gray-600 mb-4">
@@ -786,7 +802,7 @@
                     <h4 class="text-lg font-semibold mb-4">Produtos</h4>
                     <ul class="space-y-2 text-sm opacity-90">
                         <li>Temperos Dona Nina</li>
-                        <li>Cheiro da Terra</li>
+                        <li>Cheiro Original da Terra</li>
                         <li>Massa de Alho</li>
                         <li>Temperos Completos</li>
                     </ul>
